# rag_kms

./: .env.example  .gitignore  README.md  docker-compose.yml  frontend_integration_workflow.md.resolved
backend/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Modelfile  README.md  diag_diversity.py  diag_duplicates.py  ingest_documents.py  inspect_search.py  interactive_rag.py  main.py  mkdocs.yml  pyproject.toml  requirements-core.txt  requirements-llm.txt  requirements-optional-langchain.txt  requirements.in  requirements.txt  reset_and_reingest.py  run_server.sh  simulate_frontend.py  test_hybrid_retrieval.py  test_rag_with_llm.py
backend/config/: config.yml
backend/docs/: architecture.md  index.md  modules.md
backend/markdowns/: DocScanner 6 Feb 2026 3-24 pm.md  INFOGRAPHICS-TutorialPDFVersion.md  jac_brochure_2025.md  sample_councelling.md  text extraction sample.md
backend/notebooks/: evaluation.ipynb  text_splitter.ipynb
backend/public/backend/markdowns/kb-1775455486558/: B.E.md  Campus_Beats_Case_Challenge_Instruction_Manual.md  Gaurav-friend-1st-freelancing.md
backend/public/backend/markdowns/kb-1775471954823/: PLACEMENT_CODE_OF_CONDUCT_.md
backend/public/backend/markdowns/kb-1775474315227/: vd.md
backend/public/backend/markdowns/kb-1775893397104/: INFOGRAPHICS-TutorialPDFVersion.md  jac_brochure_2025.md
backend/public/backend/markdowns/kb-1775908183304/: executive-summary_the-next-normal-in-construction.md
backend/public/backend/markdowns/kb-1776421106007/: Churn_1_.md
backend/public/backend/markdowns/kb-1776421639024/: HOSTEL_FEE_OF_JAN-JULY2026.md
backend/public/chat_history/: conv-1774527282074.json  conv-5.json
backend/scripts/: lock-requirements.sh
backend/src/: __init__.py
backend/src/evaluation/: __init__.py  bm25_retriever.py
backend/src/generation/: generator.py
backend/src/models/: embedding_model.py  reranker_model.py  session_model.py
backend/src/preprocessing/: chunking.py  chunking_strategies.py  data_fetch.py  markdown.py  ocr_cleanup.py  preprocessing.py
backend/src/preprocessing/chunkers/: __init__.py  fixed_size_chunker.py  hierarchical_chunker.py  hybrid_chunker.py  recursive_chunker.py  semantic_chunker.py
backend/src/retrieval/: bm25_retriever.py  rag_connector.py  vector_store.py
backend/tests/: test_connector.py  test_data_fetch.py  test_data_fetcher.py  test_embedding_model.py  test_generator.py  test_markdown_processor.py  test_preprocessing.py  test_rag_connector.py  test_rag_system.py  test_session_manager.py  test_session_model.py  test_vector_store.py
deploy/: .env.vps.example
deploy/nginx/: rag-kms.conf  rag-kms.http-only.conf  rag-kms.ip.conf
frontend/: Dockerfile  package-lock.json  package.json
(+26 files in other folders)
