[project]
name = "rag4gov"
version = "0.0.1"
description = "RAG For Government"
authors = [{ name = "Fréjus Laleye", email = "frejus.laleye@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "pdfplumber",
    "pdf2image",
    "pytesseract",
    "gdown",
    "python-dotenv",
    "pydantic",
    "qdrant-client>=1.7.0",
    "langchain_text_splitters",
    "sentence-transformers",
    "tabulate",
    "torch>=2.0.0",
    "numpy",
    "scikit-learn",
    "datasets>=2.0.0"
]


[project.urls]
Homepage = "https://laleye.github.io/rag4gov/"
Repository = "https://github.com/laleye/rag4gov"
Documentation = "https://laleye.github.io/rag4gov/"

[project.optional-dependencies]
hybrid-search = [
    "rank-bm25>=0.2.2"
]

dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.2",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag4gov"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY"
]
ignore = [
    "E501",  # LineTooLong
    "E731",  # DoNotAssignLambda
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

# Optional: Add environment-specific configuration for dependency resolution
[tool.uv]
# Specify the index URL for CPU-only PyTorch
extra-index-url = ["https://download.pytorch.org/whl/cpu"]